@@ -1,4 +1,5 @@
 libmpdclient 2.10 (not yet released)
+* support abstract sockets with "@" prefix
 
 libmpdclient 2.9 (2013/10/29)
 * directory: support attribute "Last-Modified"
